# tokult

./: .gitignore  README.org  pyproject.toml  setup.cfg
data/: kappa_tutorial.fits
docs/: .buildinfo  _index.html  genindex.html  gettingstarted.html  how_to_make_noises.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tokult.html  visualization.html
docs/.doctrees/: _index.doctree  environment.pickle  gettingstarted.doctree  how_to_make_noises.doctree  index.doctree  modules.doctree  tokult.doctree  visualization.doctree
docs/_sources/: gettingstarted.rst.txt  index.rst.txt  visualization.rst.txt
docs_src/: _index.org  _index.rst  conf.py  gettingstarted.org  gettingstarted.rst  how_to_make_noises.org  how_to_make_noises.rst  index.rst  modules.rst  tokult.rst  visualization.org  visualization.rst
example/: example.py
test/: test_casa.py  test_fitting.py  test_misc.py
tokult/: __init__.py  casa.py  casa_dummy.py  common.py  config.ini  core.py  example.py  fitting.py  function.py  misc.py
tutorial/: mockcube_dirty_tutorial.fits  tokult_cube_dirty.psf.fits  tokult_cube_dirty_uniform.psf.fits  tokult_gamma1.fits  tokult_gamma2.fits  tokult_x-arcsec-deflect.fits  tokult_y-arcsec-deflect.fits
